--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,8 @@ img {
 }
 
 .page-header .page-link {
-  display: flex;
+  display: block;
+  padding: 32px 0 32px 0;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.14;
@@ -132,7 +133,10 @@ img {
   list-style: none;
   text-decoration: none;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .page-header .page-link:hover {
   color: var(--accent-color);
   list-style: none;
@@ -141,7 +145,10 @@ img {
   color: var(--accent-color);
   list-style: none;
 }
-
+.page-link:active {
+  color: #2196f3;
+  list-style: circle;
+}
 .effective-solutions {
   padding-top: 200px;
   padding-bottom: 200px;
@@ -303,6 +310,7 @@ img {
 .img-info {
   position: absolute;
   bottom: 0;
+  text-transform: uppercase;
   width: 370px;
   height: 70px;
   padding-top: 27px;
@@ -500,6 +508,39 @@ img {
 .portfolio-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.overlay-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  opacity: 0;
+
+  transform: translatey(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-text {
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5556;
+  letter-spacing: 0.03em;
+
+  color: var(--primery-white-color);
+}
+
+.portfolio-link:hover .overlay {
+  transform: translatey(0);
+  opacity: 1;
 }
 .portfolio-wap {
   padding-top: 20px;
