--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,8 @@ img {
 }
 
 .page-header .page-link {
-  display: block;
+  position: relative;
+  display: inline-block;
   padding: 32px 0 32px 0;
   font-size: 14px;
   font-weight: 500;
@@ -135,6 +136,23 @@ img {
   letter-spacing: 0.02em;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.page-link.current {
+  color: var(--accent-color);
+  position: relative;
+}
+.current::after {
+  content: "";
+
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 .page-header .page-link:hover {
@@ -400,10 +418,6 @@ img {
   fill: var(--primery-white-color);
 }
 
-.social-icon {
-  fill: var(--promary-icon-color);
-}
-
 /* Постояные клиенты */
 .clients {
   margin: 0;
@@ -651,4 +665,61 @@ img {
 }
 span {
   color: var(--accent-color);
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden .modal {
+  opacity: 0.5;
+  transform: translate(-50%, -50%) scale(1.3);
+
+  transition-duration: 300ms;
+  transition-timing-function: ease;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+  transition: opacity 300ms, visibility 300ms;
+  transition-timing-function: ease;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  width: 528px;
+  height: 581px;
+  padding: 8px;
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  opacity: 1;
+  transition: transform 250ms cubic-bezier(0.49, 0.02, 0.23, 0.92),
+    opacity 250ms cubic-bezier(0.49, 0.02, 0.23, 0.92);
+}
+.close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+}
+.modal button {
+  cursor: pointer;
+
+  padding: 0;
+
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
