--- a/css/style.css
+++ b/css/style.css
@@ -304,8 +304,6 @@ img {
   padding-left: 0;
 }
 
-.work {
-}
 .work .work-title {
   text-align: center;
   margin-bottom: 50px;
@@ -410,7 +408,8 @@ img {
   justify-content: center;
   align-items: center;
   fill: var(--promary-icon-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms, background 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -454,7 +453,8 @@ img {
   color: var(--promary-icon-color);
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms, border-color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-item:not(:last-child) {
   margin-left: 0;
@@ -490,7 +490,8 @@ img {
   background-color: var(--promary-button-bacgriund-color);
   border-radius: 4px;
   border-style: unset;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms, background 250ms, box-shadow 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation-button:hover,
 .navigation-button:focus {
