--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,7 @@ img {
   justify-content: center;
   align-items: center;
   fill: var(--promary-icon-color);
-  transition: color 250ms, background 250ms;
+  transition: color 250ms, background-color 250ms, fill 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -453,7 +453,7 @@ img {
   color: var(--promary-icon-color);
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: color 250ms, border-color 250ms;
+  transition: color 250ms, fill 250ms, background-color 250ms, box-shadow 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-item:not(:last-child) {
@@ -650,7 +650,8 @@ img {
   justify-content: center;
   align-items: center;
   color: var(--color-white);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms, background 250ms, box-shadow 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .join-icon {
   fill: var(--primery-white-color);
