--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,88 @@ img {
 span {
   color: var(--accent-color);
 }
+.join-title-us {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: var(--primery-white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.join-us {
+  display: block;
+  margin-left: 93px;
+}
+.join-form {
+  display: flex;
+}
+.form-label {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+}
+.join-us-mail {
+  margin-right: 12px;
+
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: var(--promary-contact-color);
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.button-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--primery-white-color);
+  background: var(--accent-color);
+  border: 0;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-icon {
+  margin-left: 10px;
+}
+
+.button-text {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
 .backdrop {
   position: fixed;
   top: 0;
@@ -702,7 +784,7 @@ span {
 
   width: 528px;
   height: 581px;
-  padding: 8px;
+  padding: 40px;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -712,20 +794,91 @@ span {
   transition: transform 250ms cubic-bezier(0.49, 0.02, 0.23, 0.92),
     opacity 250ms cubic-bezier(0.49, 0.02, 0.23, 0.92);
 }
+.form {
+  display: block;
+}
+.form-label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.66;
+
+  letter-spacing: 0.01em;
+
+  color: var(--pramary-text-color);
+}
+.form-block {
+  margin: 0;
+  height: 58px;
+  position: relative;
+}
+.form-block:not(:last-child) {
+  margin-bottom: 10px;
+}
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding: 0 10px 0 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: fill 250ms, background-color 250ms, box-shadow 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:hover + .form-icon {
+  fill: var(--accent-color);
+}
+
+.form-input:hover {
+  border: 1px solid #2196f3;
+}
+
+.form-icon {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+}
+
+.form-title {
+  margin-bottom: 12px;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--title-text-color);
+}
+
 .close {
   position: absolute;
   top: 8px;
   right: 8px;
-
+  cursor: pointer;
+  padding: 0;
+  border-radius: 50%;
+  background: var(--primery-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   width: 30px;
   height: 30px;
 }
-.modal button {
-  cursor: pointer;
 
-  padding: 0;
-
-  border-radius: 50%;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+.form-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--primery-white-color);
+  background: var(--accent-color);
+  border: 0;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
